kubernetes/apps/dashboard/dashboard-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basicauth
  namespace: dashboard
spec:
  basicAuth:
    secret: dashboard-auth
