kubernetes/apps/dashboard/dashboard-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-homepage
  namespace: dashboard
  labels:
    app: dashboard-homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # io.kompose.network/dockerfile-default: "true"
        app: dashboard-homepage
    spec:
      containers:
        - image: ghcr.io/benphelps/homepage:v0.6.10
          name: dashboard-homepage
          resources: {}
          volumeMounts:
            - mountPath: /app/config/settings.yaml
              name: dashboard-homepage-settings
              subPath: settings.yaml
            - mountPath: /app/config/bookmarks.yaml
              name: dashboard-homepage-bookmarks
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: dashboard-homepage-docker
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: dashboard-homepage-kubernetes
              subPath: kubernetes.yaml
            - mountPath: /app/config/widgets.yaml
              name: dashboard-homepage-widgets
              subPath: widgets.yaml
            - mountPath: /app/config/services.yaml
              name: dashboard-homepage-services
              subPath: services.yaml
      restartPolicy: Always
      volumes:
        - name: dashboard-homepage-services
          configMap:
            name: dashboard-homepage-services
        - name: dashboard-homepage-bookmarks
          configMap:
            name: dashboard-homepage-bookmarks
        - name: dashboard-homepage-docker
          configMap:
            name: dashboard-homepage-docker
        - name: dashboard-homepage-kubernetes
          configMap:
            name: dashboard-homepage-kubernetes
        - name: dashboard-homepage-widgets
          configMap:
            name: dashboard-homepage-widgets
        - name: dashboard-homepage-settings
          configMap:
            name: dashboard-homepage-settings
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-homepage
  namespace: dashboard
spec:
  selector:
    app: dashboard-homepage
  ports:
  - name: http
    targetPort: 3000
    port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-homepage-cloud
  namespace: dashboard
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.cloud.icecoldlair.com`)
      kind: Rule
      services:
        - name: dashboard-homepage
          port: 3000
          namespace: dashboard
      middlewares:
       - name: dashboard-basicauth
         namespace: dashboard
  tls:
    secretName: cloud-icecoldlair-com-prod
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-homepage-local
  namespace: dashboard
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.local.icecoldlair.com`)
      kind: Rule
      services:
        - name: dashboard-homepage
          port: 3000
          namespace: dashboard
      middlewares:
       - name: dashboard-basicauth
         namespace: dashboard
  tls:
    secretName: local-icecoldlair-com-prod
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-homepage
  namespace: dashboard
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`icecoldlair.com`)
      kind: Rule
      services:
        - name: dashboard-homepage
          port: 3000
          namespace: dashboard
      middlewares:
       - name: dashboard-basicauth
         namespace: dashboard
  tls:
    secretName: icecoldlair-com-prod
